Added Cart page and updated navs.

--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
       <li><a href="fundraise.html">Fundraise</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="bag.html"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+      <li><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       <li class="active"><a href="profile.html"><span class="glyphicon glyphicon-user"></span></a></li>
     </ul>
   </div>
