--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HoosThrifting</title>
+    <title>Cart</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
       <li><a href="fundraise.html">Fundraise</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+      <li class="active"><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
       <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span></a></li>
     </ul>
   </div>
