--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Contact</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Contact</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
+
+<!-- Bootstrap Nav Bar from https://www.w3schools.com/bootstrap/bootstrap_navbar.asp -->    
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="index.html">HoosThrifting</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="sell.html">Sell</a></li>
+      <li><a href="fundraise.html">Fundraise</a></li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+      <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span></a></li>
+    </ul>
+  </div>
+</nav>
+
+
+
+
 
 </body>
 </html>
