Added footers and fixed indentation.

--- a/cart.html
+++ b/cart.html
@@ -10,25 +10,36 @@
 
 <!-- Bootstrap Nav Bar from https://www.w3schools.com/bootstrap/bootstrap_navbar.asp -->    
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="index.html">HoosThrifting</a>
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">HoosThrifting</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="sell.html">Sell</a></li>
+            <li><a href="fundraise.html">Fundraise</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
+            <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span></a></li>
+        </ul>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="sell.html">Sell</a></li>
-      <li><a href="fundraise.html">Fundraise</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li class="active"><a href="cart.html"><span class="glyphicon glyphicon-shopping-cart"></span></a></li>
-      <li><a href="profile.html"><span class="glyphicon glyphicon-user"></span></a></li>
-    </ul>
-  </div>
 </nav>
 
 
-
-
+<footer>
+    <small>&copy; AV/CJ</small>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="shop.html">Shop</a></li>
+            <li><a href="sell.html">Sell</a></li>
+            <li><a href="fundraise.html">Fundraise</a></li>
+            <li><a href="cart.html">Cart</a></li>
+            <li><a href="profile.html">Profile</a></li>
+        </ul>
+    </nav>
+</footer>
 
 </body>
 </html>
