Added css, updated nav and footer.

--- a/faq.html
+++ b/faq.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FAQ</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
@@ -26,19 +27,28 @@
     </div>
 </nav>
 
-<footer>
-    <small>&copy; AV/CJ</small>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="shop.html">Shop</a></li>
-            <li><a href="sell.html">Sell</a></li>
-            <li><a href="fundraise.html">Fundraise</a></li>
-            <li><a href="cart.html">Cart</a></li>
-            <li><a href="profile.html">Profile</a></li>
-        </ul>
-    </nav>
+<footer class="page-footer">
+    <div class="row">
+        <div class="left-footer col-md-6">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="sell.html">Sell</a></li>
+                <li><a href="fundraise.html">Fundraise</a></li>
+            </ul>
+        </div>
+        <div class="right-footer col-md-6">
+            <ul>
+                <li><a href="cart.html">Cart</a></li>
+                <li><a href="profile.html">Profile</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="copyright text-center">
+        <small>&copy; 2020 AV/CJ</small>
+    </div>
 </footer>
-
 </body>
 </html>
