--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
     </div>
 </nav>
 
+<div class="container-fluid">
+    <div class="page-header">
+        <h1>HoosThrifting</h1>
+    </div>
+    <div class="row">
+        
+    </div>
+</div>
+
 
 <footer class="page-footer">
     <div class="row">
