--- a/sell.html
+++ b/sell.html
@@ -27,6 +27,16 @@
     </div>
 </nav>
 
+<div class="container-fluid">
+    <div class="page-header">
+        <h1>Sell</h1>
+    </div>
+    <div class="row">
+        
+    </div>
+</div>
+
+
 <footer class="page-footer">
     <div class="row">
         <div class="left-footer col-md-6">
