--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>FAQ</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -32,13 +34,58 @@
         <h1>FAQ</h1>
     </div>
     <div class="row">
-        
+        <div class="collapsible-set">
+            <!-- Collapsible from https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_collapsible_accordion&stacked=h -->
+            <div class="panel-group" id="accordion">
+                <div class="panel panel-default">
+                    <a class="btn-block panel-heading panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                        Question 1
+                    </a>
+                    <div id="collapse1" class="panel-collapse collapse">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <a class="btn-block panel-heading panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                        Question 2
+                    </a>
+                    <div id="collapse2" class="panel-collapse collapse">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</div>
+                    </div>
+                </div>
+                <div class="panel panel-default">
+                    <a class="btn-block panel-heading panel-title" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                        Question 3
+                    </a>
+                    <div id="collapse3" class="panel-collapse collapse">
+                        <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore.</div>
+                    </div>
+                </div>
+            </div> 
+        </div>
     </div>
 </div>
 
+<script>http://192.168.64.3/hoos-thrifting/sell.html
+var coll = document.getElementsByClassName("collapsible");
+var i;
+
+for (i = 0; i < coll.length; i++) {
+    coll[i].addEventListener("click", function() {
+        this.classList.toggle("collapsible-active");
+        var content = this.nextElementSibling;
+        if (content.style.maxHeight){
+            content.style.maxHeight = null;
+        } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+        }  
+    });
+}
+</script>
+
 <footer class="page-footer">
     <div class="row">
-        <div class="left-footer col-md-6">
+        <div class="left-footer col-xs-6">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
@@ -46,7 +93,7 @@
                 <li><a href="fundraise.html">Fundraise</a></li>
             </ul>
         </div>
-        <div class="right-footer col-md-6">
+        <div class="right-footer col-xs-6">
             <ul>
                 <li><a href="cart.html">Cart</a></li>
                 <li><a href="profile.html">Profile</a></li>
