Updated footers and Sell page.

--- a/faq.html
+++ b/faq.html
@@ -33,7 +33,7 @@
     <div class="page-header">
         <h1>FAQ</h1>
     </div>
-    <div class="row">
+    <div class="page-content">
         <div class="collapsible-set">
             <!-- Collapsible from https://www.w3schools.com/bootstrap/tryit.asp?filename=trybs_collapsible_accordion&stacked=h -->
             <div class="panel-group" id="accordion">
@@ -106,5 +106,6 @@ for (i = 0; i < coll.length; i++) {
         <small>&copy; 2020 AV/CJ</small>
     </div>
 </footer>
+
 </body>
 </html>
