--- a/shop.html
+++ b/shop.html
@@ -38,10 +38,9 @@
     </div>
 </div>
 
-
 <footer class="page-footer">
     <div class="row">
-        <div class="left-footer col-md-6">
+        <div class="left-footer col-xs-6">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
@@ -49,7 +48,7 @@
                 <li><a href="fundraise.html">Fundraise</a></li>
             </ul>
         </div>
-        <div class="right-footer col-md-6">
+        <div class="right-footer col-xs-6">
             <ul>
                 <li><a href="cart.html">Cart</a></li>
                 <li><a href="profile.html">Profile</a></li>
@@ -62,5 +61,6 @@
         <small>&copy; 2020 AV/CJ</small>
     </div>
 </footer>
+
 </body>
 </html>
