--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
 <footer class="page-footer">
     <div class="row">
-        <div class="left-footer col-md-6">
+        <div class="left-footer col-xs-6">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
@@ -49,7 +49,7 @@
                 <li><a href="fundraise.html">Fundraise</a></li>
             </ul>
         </div>
-        <div class="right-footer col-md-6">
+        <div class="right-footer col-xs-6">
             <ul>
                 <li><a href="cart.html">Cart</a></li>
                 <li><a href="profile.html">Profile</a></li>
