--- a/sell.html
+++ b/sell.html
@@ -33,15 +33,94 @@
     <div class="page-header">
         <h1>Sell</h1>
     </div>
-    <div class="row">
-        
+    <div class="page-content">
+        <!-- Bootstrap form from https://www.w3schools.com/bootstrap/bootstrap_forms.asp -->
+        <form id="sell-form" class="form-horizontal" action="" method="post" onsubmit="return validateInput()">
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="category">Category:</label>
+                <div class="col-sm-10">          
+                    <select class="form-control" id="category">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="brand">Brand:</label>
+                <div class="col-sm-10">          
+                    <select class="form-control" id="brand">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="size">Size:</label>
+                <div class="col-sm-10">          
+                    <select class="form-control" id="size">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="color">Color:</label>
+                <div class="col-sm-10">          
+                    <select class="form-control" id="color">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="control-label col-sm-2" for="condition">Condition:</label>
+                <div class="col-sm-10">          
+                    <select class="form-control" id="condition">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">   
+                <label class="control-label col-sm-2" for="desc">Description:</label>
+                <div class="col-sm-10">
+                    <textarea class="form-control" id="desc"></textarea>
+                </div>
+            </div>
+            <div class="form-group">   
+                <label class="control-label col-sm-2" for="price">Price:</label>
+                <div class="col-sm-10">
+                    <input class="form-control"  id="price"></input>
+                </div>
+            </div>
+            <div class="form-group">        
+                <div class="col-sm-offset-2 col-sm-10">
+                    <button type="submit" class="btn btn-default">Submit</button>
+                </div>
+            </div>
+        </form>
     </div>
 </div>
 
 
 <footer class="page-footer">
     <div class="row">
-        <div class="left-footer col-md-6">
+        <div class="left-footer col-xs-6">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="shop.html">Shop</a></li>
@@ -49,7 +128,7 @@
                 <li><a href="fundraise.html">Fundraise</a></li>
             </ul>
         </div>
-        <div class="right-footer col-md-6">
+        <div class="right-footer col-xs-6">
             <ul>
                 <li><a href="cart.html">Cart</a></li>
                 <li><a href="profile.html">Profile</a></li>
