--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
     <div class="page-header">
         <h1>Contact Us</h1>
     </div>
