--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
     <div class="page-header">
         <h1>HoosThrifting</h1>
     </div>
