--- a/sell.html
+++ b/sell.html
@@ -30,7 +30,7 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container">
     <div class="page-header">
         <h1>Sell</h1>
     </div>
