Fixed headers. Added JS to Contact page. Updated Sell page

--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,13 @@
 </header>  
 
 <div class="container">
-    <div class="page-header">
-        <h1>Contact Us</h1>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4"><a href="contact.html">Contact Us</a></h1>
     </div>
     <div class="row">
 
-        <div class="col-lg-7 p-5">
-            <p> Before sending us a message, make sure our <a href="faq.html">Frequently Asked Questions (FAQ)</a> page doesn't already answer your questions! If you still have any inquiries, go ahead and send us message using the form.</p>
+        <div class="col-lg-7">
+            <p class="lead"> Before sending us a message, make sure our <a href="faq.html">Frequently Asked Questions (FAQ)</a> page doesn't already answer your questions! If you still have any inquiries, go ahead and send us message using the form.</p>
         </div>
 
         <div class="col-lg-5">
@@ -66,14 +66,17 @@
 	            <div class="form-group"> 
 	                <label>Message:</label><br>
 	                <textarea class="form-control" id="message" required placeholder="Give a brief description of your situation or question!" rows=10></textarea>
-	            </div>
-	            <div class="form-group"> 
-	            	<button type="submit" class="btn btn-primary" style="width:144px">Send</button><br>
-	        	</div>
+                </div>
+                <div class="form-group"> 
+                    <button type="submit" class="btn btn-primary" style="width:144px">Send</button>
+                </div>
+	        	
             </form>
 
-            <div id="Confirm-Submission" style="display: none">
-        		<p> Thank you for submitting your message! We'll get back to you soon.
+            <div id="Confirm-Submission" style="display: none;">
+                <img class="rounded mx-auto d-block" src="https://svgsilh.com/svg/40319.svg" alt="Upload Icon" style="width:90px;height:90px;" class="center" >
+                
+                <p class="lead" style="padding-top: 10px">  Thank you for submitting your message! We'll get back to you soon.
         		</p>
         	</div>
 
@@ -110,6 +113,5 @@
         <small>&copy; 2020 AV/CJ</small>
     </div>
 </footer>
-
 </body>
 </html>
