--- a/faq.html
+++ b/faq.html
@@ -37,8 +37,8 @@
 </header>  
 
 <div class="container">
-    <div class="page-header">
-        <h1>FAQ</h1>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4"><a href="faq.html">FAQ</a></h1>
     </div>
     <div class="page-content">
         <div class="collapsible-set">
