--- a/cart.html
+++ b/cart.html
@@ -37,8 +37,8 @@
 </header>  
 
 <div class="container">
-    <div class="page-header">
-        <h1>Cart</h1>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4"><a href="cart.html">Cart</a></h1>
     </div>
     <div class="row">
         
