--- a/shop.html
+++ b/shop.html
@@ -37,8 +37,8 @@
 </header>  
 
 <div class="container">
-    <div class="page-header">
-        <h1>Shop</h1>
+    <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+        <h1 class="display-4"><a href="shop.html">Shop</a></h1>
     </div>
     <div class="row">
         <a href="#">Back to top</a>
