--- a/fundraise.html
+++ b/fundraise.html
@@ -39,33 +39,89 @@
 <div class="container">
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4"><a href="fundraise.html">Fundraise</a></h1>
+        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. </p>
     </div>
+
     <div class="row">
-
         <div class="col-lg-4">
-
-            <h3>How it Works:</h3>
+            <h3>Step 1:</h3>
             <p> Lorem ipsum dolor sit amet, ei duo repudiandae vituperatoribus. Graece suscipit philosophia pro ad. Clita affert melius ei sea. Qualisque accusamus has an.
-
-            Id sea nullam incorrupte, per bonorum conclusionemque no, at admodum similique est. Laudem possit equidem vix id, oratio viderer theophrastus te sit, vel cetero phaedrum id. Sale adhuc definiebas ei mei, usu postulant suavitate ut. Wisi affert semper an per, ut mel expetenda assueverit.</p>
+            </p>
 
         </div>
         <div class="col-lg-4">
-
-            <h3>Fill out this form!</h3>
+            <h3>Step 2:</h3>
             <p> Lorem ipsum dolor sit amet, ei duo repudiandae vituperatoribus. Graece suscipit philosophia pro ad. Clita affert melius ei sea. Qualisque accusamus has an.
-
-            Id sea nullam incorrupte, per bonorum conclusionemque no, at admodum similique est. Laudem possit equidem vix id, oratio viderer theophrastus te sit, vel cetero phaedrum id. Sale adhuc definiebas ei mei, usu postulant suavitate ut. Wisi affert semper an per, ut mel expetenda assueverit.</p>
+            </p>
 
         </div>
         <div class="col-lg-4">
-            <h3>Make money!</h3>
+            <h3>Step 3:</h3>
             <p> Lorem ipsum dolor sit amet, ei duo repudiandae vituperatoribus. Graece suscipit philosophia pro ad. Clita affert melius ei sea. Qualisque accusamus has an.
-
-            Id sea nullam incorrupte, per bonorum conclusionemque no, at admodum similique est. Laudem possit equidem vix id, oratio viderer theophrastus te sit, vel cetero phaedrum id. Sale adhuc definiebas ei mei, usu postulant suavitate ut. Wisi affert semper an per, ut mel expetenda assueverit.</p>
-
+            </p>
         </div>
     </div>
+
+    <hr class="featurette-divider">
+    <form id="fundraise-form" onsubmit="confirmMessage()">
+    <div class="row">
+        <!--Contact Information-->
+        <div class="col-lg-3 form-group required">   
+            <label for="FName">Contact Name:</label><br>
+            <input class="form-control" id="FName" type="text" required placeholder="First Name" autofocus></input>
+        </div>
+        <div class="col-lg-3 form-group">   
+            <label>&nbsp;</dd></label><br>
+            <input class="form-control" id="LName" type="text" required placeholder="Last Name"></input>
+        </div>
+        <div class="col-lg-3 form-group required">   
+            <label for="Email">Contact Email:</label><br>
+            <input class="form-control" id="Email" type="email" required placeholder="your@email.com" ></input>
+        </div>
+        <div class="col-lg-3 form-group ">   
+            <label for="Number">Contact Number:</label><br>
+            <input class="form-control" id="Number" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(___)-___-____"></input>
+        </div>
+        <!--Organization Information-->
+        <div class="col-lg-3 form-group required">   
+            <label for="org">Organization (CIO):</label><br>
+            <input class="form-control" id="org" type="text" placeholder="Name" required></input>
+        </div>
+        <div class="col-lg-3 form-group required">   
+            <label for="CharityButton">Fundraising Purpose:</label><br>
+            <button id="CharityButton" type="button" class="btn btn-outline-secondary" required>Charity</button> &nbsp;
+            <button id="OrgButton" type="button" class="btn btn-outline-secondary " required>&nbsp;&nbsp;&nbsp;CIO&nbsp;&nbsp;&nbsp;</button>
+        </div>
+        <div class="col-lg-6 form-group">   
+            <label for="description">Fundraising Description:</label><br>
+            <textarea class="form-control" id="description" rows=2 placeholder="Let everyone know what you're raising money for!"></textarea>
+        </div>
+        <!--Fundraising Information-->
+        <div class="col-lg-3 form-group required">   
+            <label for="start">Start Date:</label><br>
+            <input required type="date" id="start" placeholder="YYYY-MM-DD" min="2020-02-27">
+        </div>
+        <div class="col-lg-3 form-group required">   
+            <label for="end">End Date:</label><br>
+            <input required type="date" id="end" placeholder="YYYY-MM-DD" min="2020-06-27">
+        </div>
+        <div class="col-lg-2 form-group required">   
+            <label for="promo">Promotional Code:</label><br>
+            <input onkeyup="checkPromo()" required type="text" id="promo" pattern="[a-zA-Z0-9]{3}+" placeholder="Min. 3 characters" minlength="3" maxlength="6">
+        </div>
+        <!--Promo code Validation-->
+        <span>
+        <div class="col-lg-4 d-inline pt-lg-2 form-group" id="promoError" style="visibility: hidden">
+            <p id="errorMessage" style="color: red; font-size: 14px;"> <br> &nbsp;&nbsp;&nbsp;Error. Code has been used before.</p>
+        </div>
+        </span>
+
+        <div class="col-lg-12 form-group"> 
+            <button type="submit" class="btn btn-primary" style="width:144px">Submit</button> 
+        </div>
+    </div>
+    </form>
 </div>
 
 
