Revised promocode JS, added buttons, updated Contact JS.

--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="Amara Vo">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact</title>
     <!-- <link rel="stylesheet" href="reset.css"> -->
@@ -15,7 +16,7 @@
 </head>
 <body>
 
-<!-- Bootstrap Nav Bar from https://getbootstrap.com/docs/4.4/components/navbar/ -->   
+<!--Source: Bootstrap Nav Bar from https://getbootstrap.com/docs/4.4/components/navbar/ -->   
 <header>
     <nav class="navbar navbar-default navbar-expand-md">
         <a class="navbar-brand" href="index.html">HoosThrifting</a>
@@ -72,18 +73,14 @@
             </form>
             <!--Confirmation Screen-->
             <div id="Confirm-Submission" style="display: none;">
-                <img class="rounded mx-auto d-block" src="https://svgsilh.com/svg/40319.svg" alt="Upload Icon" style="width:90px;height:90px;" class="center" >
-                
-                <p class="lead" style="padding-top: 10px">  Thank you for submitting your message! We'll get back to you soon.
-        		</p>
+                <img class="rounded mx-auto d-block" src="https://svgsilh.com/svg/40319.svg" alt="Checkmark" style="width:90px;height:90px;" class="center" >
+                <p id="Confirm-Text" class="lead" style="padding-top: 10px"></p>
         	</div>
-
         </div>
-        
     </div>
-
 </div>
 
+<!--Footer-->
 <footer class="page-footer">
     <div class="row">
         <div class="col-4">
