--- a/fundraise.html
+++ b/fundraise.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="author" content="Amara Vo">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Fundraise</title>
@@ -15,7 +16,7 @@
 </head>
 <body>
 
-<!-- Bootstrap Nav Bar from https://getbootstrap.com/docs/4.4/components/navbar/ -->   
+<!--Source: Bootstrap Nav Bar from https://getbootstrap.com/docs/4.4/components/navbar/ -->   
 <header>
     <nav class="navbar navbar-default navbar-expand-md">
         <a class="navbar-brand" href="index.html">HoosThrifting</a>
@@ -37,12 +38,14 @@
 </header>  
 
 <div class="container">
+    
     <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
         <h1 class="display-4"><a href="fundraise.html">Fundraise</a></h1>
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
             tempor incididunt ut labore et dolore magna aliqua. </p>
     </div>
 
+    <!--Steps of Fundraising-->
     <div class="row">
         <div class="col-lg-4">
             <h3>Step 1:</h3>
@@ -63,68 +66,78 @@
         </div>
     </div>
 
+    <!--Fundraise Form-->
     <hr class="featurette-divider">
     <form id="fundraise-form" onsubmit="confirmMessage()">
-    <div class="row">
-        <!--Contact Information-->
-        <div class="col-lg-3 form-group required">   
-            <label for="FName">Contact Name:</label><br>
-            <input class="form-control" id="FName" type="text" required placeholder="First Name" autofocus></input>
+        <div class="row">
+            <!--Contact Information-->
+            <div class="col-lg-3 form-group required">   
+                <label for="FName">Contact Name:</label><br>
+                <input class="form-control" id="FName" type="text" required placeholder="First Name" autofocus></input>
+            </div>
+            <div class="col-lg-3 form-group">   
+                <label>&nbsp;</dd></label><br>
+                <input class="form-control" id="LName" type="text" required placeholder="Last Name"></input>
+            </div>
+            <div class="col-lg-3 form-group required">   
+                <label for="Email">Contact Email:</label><br>
+                <input class="form-control" id="Email" type="email" required placeholder="your@email.com" ></input>
+            </div>
+            <div class="col-lg-3 form-group ">   
+                <label for="Number">Contact Number:</label><br>
+                <input class="form-control" id="Number" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(___)-___-____"></input>
+            </div>
+            <!--Organization Information-->
+            <div class="col-lg-3 form-group required">   
+                <label for="org">Organization (CIO):</label><br>
+                <input class="form-control" id="org" type="text" placeholder="Name" required></input>
+            </div>
+            <div class="col-lg-3 form-group required d-inline">   
+                <label for="CharityButton">Fundraising Purpose:</label><br>
+                <input type="radio" name="purpose" id="CIO-purpose" value="CIO" required><span id="choice"> <label for="CIO-purpose"> CIO</label> </span><br>
+                <input type="radio" name="purpose" id="Charity-purpose" value="CIO" required><span id="choice"> <label for="Charity-purpose"> Charity</label> </span>
+                
+            </div>
+            <div class="col-lg-6 form-group">   
+                <label for="description">Fundraising Description:</label><br>
+                <textarea class="form-control" id="description" rows=2 placeholder="Let everyone know what you're raising money for!"></textarea>
+            </div>
+            <!--Fundraising Information-->
+            <div class="col-lg-3 form-group required">   
+                <label for="start">Start Date:</label><br>
+                <input required type="date" id="start" placeholder="YYYY-MM-DD" min="2020-02-27">
+            </div>
+            <div class="col-lg-3 form-group required">   
+                <label for="end">End Date:</label><br>
+                <input required type="date" id="end" placeholder="YYYY-MM-DD" min="2020-06-27">
+            </div>
+            <!--Promo code Box-->
+            <div class="col-lg-2 form-group required">   
+                <label for="promo">Promotional Code:</label><br>
+                <input onkeyup="checkPromo()" required type="text" id="promo" pattern="[A-Za-z0-9]{3,6}" placeholder="Min. 3 characters" minlength="3" maxlength="6" style="width: 150px">
+            </div>
+            <!--Promo code Validation-->
+            <span>
+            <div class="col-lg-4 d-inline pt-lg-2 form-group" id="promoError" style="visibility: hidden">
+                <p id="errorMessage" style="color: red; font-size: 14px;"> <br>Error. Code has been used before.</p>
+            </div>
+            </span>
+            <!--Submit Button-->
+            <div class="col-lg-12 form-group"> 
+                <button id="submitButton" type="submit" class="btn btn-primary" style="width:144px">Submit</button> 
+            </div>
         </div>
-        <div class="col-lg-3 form-group">   
-            <label>&nbsp;</dd></label><br>
-            <input class="form-control" id="LName" type="text" required placeholder="Last Name"></input>
-        </div>
-        <div class="col-lg-3 form-group required">   
-            <label for="Email">Contact Email:</label><br>
-            <input class="form-control" id="Email" type="email" required placeholder="your@email.com" ></input>
-        </div>
-        <div class="col-lg-3 form-group ">   
-            <label for="Number">Contact Number:</label><br>
-            <input class="form-control" id="Number" type="tel" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(___)-___-____"></input>
-        </div>
-        <!--Organization Information-->
-        <div class="col-lg-3 form-group required">   
-            <label for="org">Organization (CIO):</label><br>
-            <input class="form-control" id="org" type="text" placeholder="Name" required></input>
-        </div>
-        <div class="col-lg-3 form-group required">   
-            <label for="CharityButton">Fundraising Purpose:</label><br>
-            <button id="CharityButton" type="button" class="btn btn-outline-secondary" required>Charity</button> &nbsp;
-            <button id="OrgButton" type="button" class="btn btn-outline-secondary " required>&nbsp;&nbsp;&nbsp;CIO&nbsp;&nbsp;&nbsp;</button>
-        </div>
-        <div class="col-lg-6 form-group">   
-            <label for="description">Fundraising Description:</label><br>
-            <textarea class="form-control" id="description" rows=2 placeholder="Let everyone know what you're raising money for!"></textarea>
-        </div>
-        <!--Fundraising Information-->
-        <div class="col-lg-3 form-group required">   
-            <label for="start">Start Date:</label><br>
-            <input required type="date" id="start" placeholder="YYYY-MM-DD" min="2020-02-27">
-        </div>
-        <div class="col-lg-3 form-group required">   
-            <label for="end">End Date:</label><br>
-            <input required type="date" id="end" placeholder="YYYY-MM-DD" min="2020-06-27">
-        </div>
-        <div class="col-lg-2 form-group required">   
-            <label for="promo">Promotional Code:</label><br>
-            <input onkeyup="checkPromo()" required type="text" id="promo" pattern="[a-zA-Z0-9]{3}+" placeholder="Min. 3 characters" minlength="3" maxlength="6">
-        </div>
-        <!--Promo code Validation-->
-        <span>
-        <div class="col-lg-4 d-inline pt-lg-2 form-group" id="promoError" style="visibility: hidden">
-            <p id="errorMessage" style="color: red; font-size: 14px;"> <br> &nbsp;&nbsp;&nbsp;Error. Code has been used before.</p>
-        </div>
-        </span>
-
-        <div class="col-lg-12 form-group"> 
-            <button type="submit" class="btn btn-primary" style="width:144px">Submit</button> 
-        </div>
-    </div>
     </form>
+
+    <!--Confirmation Screen-->
+    <div id="Confirm-Submission" style="display: none;">
+        <img class="rounded mx-auto d-block" src="https://svgsilh.com/svg/40319.svg" alt="Checkmark" style="width:90px;height:90px;" class="center" >
+        <p id="Confirm-Text" class="lead" style="padding-top: 10px; text-align: center;"></p>
+    </div>
+
 </div>
 
-
+<!--Footer-->
 <footer class="page-footer">
     <div class="row">
         <div class="col-4">
