Made some styling changes on Shop.

--- a/assign4/src/index.html
+++ b/assign4/src/index.html
@@ -27,7 +27,12 @@
                                 <li class="nav-item"><a href="http://localhost:4200" class="nav-link">Shop</a></li>
                                 <li class="nav-item"><a href="http://localhost/hoos-thrifting/php/sell.php" class="nav-link">Sell</a></li>
                                 <li class="nav-item"><a href="http://localhost/hoos-thrifting/php/fundraise.php" class="nav-link">Fundraise</a></li>
-                        </ul>      
+                        </ul>    
+                        <ul class="navbar-nav ml-auto">
+                                <li class="nav-item"><a href='''></a></li>
+                                <li class="nav-item"><a href="http://localhost/hoos-thrifting/php/cart.php" class="nav-link"><i class="fas fa-shopping-cart"></i></a></li>
+                                <li class="nav-item"><a href="http://localhost/hoos-thrifting/php/profile.php" class="nav-link"><i class="fas fa-user"></i></a></li>
+                        </ul>     
                 </div>  
         </nav>
    </header>
